updated file; parcially done 1c

--- a/src/MA3.ipynb
+++ b/src/MA3.ipynb
@@ -20,13 +20,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 127,
    "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "import sympy as sp\n",
+    "from scipy.special import erf as ge\n",
     "plt.style.use('seaborn-whitegrid')"
    ]
   },
@@ -145,7 +146,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 128,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -166,7 +167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 129,
    "metadata": {},
    "outputs": [
     {
@@ -375,7 +376,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 130,
    "metadata": {},
    "outputs": [
     {
@@ -400,7 +401,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 131,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -418,7 +419,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 132,
    "metadata": {},
    "outputs": [
     {
@@ -444,7 +445,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 133,
    "metadata": {},
    "outputs": [
     {
@@ -456,7 +457,7 @@
        "2*exp(-x**2)/sqrt(pi)"
       ]
      },
-     "execution_count": 89,
+     "execution_count": 133,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -468,25 +469,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 134,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/latex": [
-       "$\\displaystyle 1.12837916709551$"
-      ],
-      "text/plain": [
-       "1.12837916709551"
-      ]
-     },
-     "execution_count": 90,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "erf'(0) = 1.12837916709551\n"
+     ]
     }
    ],
    "source": [
-    "derf.subs(x, 0).evalf()"
+    "print(f\"erf'(0) = {derf.subs(x, 0).evalf()}\")"
    ]
   },
   {
@@ -507,7 +502,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 135,
    "metadata": {},
    "outputs": [
     {
@@ -519,7 +514,7 @@
        "-4*x*exp(-x**2)/sqrt(pi)"
       ]
      },
-     "execution_count": 91,
+     "execution_count": 135,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -532,26 +527,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 136,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/latex": [
-       "$\\displaystyle 0$"
-      ],
-      "text/plain": [
-       "0"
-      ]
-     },
-     "execution_count": 93,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "erf''(0) = 0\n"
+     ]
     }
    ],
    "source": [
     "# Evaluating second derivative at x = 0\n",
-    "sec_derf.subs(x, 0).evalf()"
+    "print(f\"erf''(0) = {sec_derf.subs(x, 0).evalf()}\")"
    ]
   },
   {
@@ -572,7 +561,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 137,
    "metadata": {},
    "outputs": [
     {
@@ -584,7 +573,7 @@
        "8*x**2*exp(-x**2)/sqrt(pi) - 4*exp(-x**2)/sqrt(pi)"
       ]
      },
-     "execution_count": 95,
+     "execution_count": 137,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -597,26 +586,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 138,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/latex": [
-       "$\\displaystyle -2.25675833419103$"
-      ],
-      "text/plain": [
-       "-2.25675833419103"
-      ]
-     },
-     "execution_count": 98,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "erf'''(0) = -2.25675833419103\n"
+     ]
     }
    ],
    "source": [
     "# Evaluating third derivative at x = 0\n",
-    "third_derf.subs(x, 0).evalf()"
+    "print(f\"erf'''(0) = {third_derf.subs(x, 0).evalf()}\")"
    ]
   },
   {
@@ -637,7 +620,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 139,
    "metadata": {},
    "outputs": [
     {
@@ -649,7 +632,7 @@
        "-16*x**3*exp(-x**2)/sqrt(pi) + 24*x*exp(-x**2)/sqrt(pi)"
       ]
      },
-     "execution_count": 99,
+     "execution_count": 139,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -662,26 +645,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 140,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/latex": [
-       "$\\displaystyle 0$"
-      ],
-      "text/plain": [
-       "0"
-      ]
-     },
-     "execution_count": 102,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "erf''''(0) = 0\n"
+     ]
     }
    ],
    "source": [
     "# Evaluating fourth derivative at x = 0\n",
-    "fourth_derf.subs(x, 0).evalf()"
+    "print(f\"erf''''(0) = {fourth_derf.subs(x, 0).evalf()}\")"
    ]
   },
   {
@@ -702,7 +679,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 141,
    "metadata": {},
    "outputs": [
     {
@@ -714,7 +691,7 @@
        "32*x**4*exp(-x**2)/sqrt(pi) - 96*x**2*exp(-x**2)/sqrt(pi) + 24*exp(-x**2)/sqrt(pi)"
       ]
      },
-     "execution_count": 103,
+     "execution_count": 141,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -727,26 +704,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 142,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/latex": [
-       "$\\displaystyle 13.5405500051462$"
-      ],
-      "text/plain": [
-       "13.5405500051462"
-      ]
-     },
-     "execution_count": 107,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "erf'''''(0) = 13.5405500051462\n"
+     ]
     }
    ],
    "source": [
     "# Evaluating fifth derivative at x = 0\n",
-    "fifth_derf.subs(x, 0).evalf()"
+    "print(f\"erf'''''(0) = {fifth_derf.subs(x, 0).evalf()}\")"
    ]
   },
   {
@@ -796,7 +767,244 @@
     "$$\n",
     "P_5 (x) = \\int_0^x P_4 (t) dt\n",
     "$$\n",
-    "We are also asked to elaborate on whether we expect $P_5 (x)$ to be a good approximation to $erf(x)$.\n",
+    "We are also asked to elaborate on whether we expect $\\frac{2}{\\sqrt{\\pi}}P_5 (x)$ to be a good approximation to $erf(x)$.\n",
+    "\n",
+    "We can either use the Lagrange interpolating polynomial or Newton's divided difference. We will here use Newton's divided difference as our method for finding the interpolating polynomial.\n",
+    "\n",
+    "If we have $n$ data points $(x_0, f(x_0)), ...,(x_n, f(x_n))$ and $f[x_1\\; ...\\; x_n]$ denote the coefficient of the $x^{n-1}$ term in a unique polynomial that interpolates the data points. Then the Newton's divided difference formula for $n$ data points is given by\n",
+    "$$\n",
+    "P(x) = f[x_1] + f[x_1\\; x_2](x - x_1) + f[x_1\\; x_2\\; x_3](x - x_1)(x - x_2) + \\dots + f[x_1\\; \\dots\\; x_n](x - x_1) \\dots (x - x_{n-1})\n",
+    "$$\n",
+    "where \n",
+    "$$\n",
+    "f[x_k] = f(x_k)\n",
+    "$$\n",
+    "$$\n",
+    "f[x_{k}\\; x_{k+1}] = \\frac{f[x_{k+1}] - f[x_{k}]}{x_{k+1} - x_k}\n",
+    "$$\n",
+    "$$\n",
+    "f[x_{k}\\; x_{k+1}\\; x_{k+2}] = \\frac{f[x_{k+1}\\; x_{k+2}] - f[x_{k}\\; x_{k+1}]}{x_{k+1} - x_k}\n",
+    "$$\n",
+    "And so on, where $k$ starting $x$-value which in our case is $1$.\n",
+    "\n",
+    "\\begin{align*}\n",
+    "f[x_1] &= y_1 = e^{-x_1^2} = e^{-0^2} = 1 \\\\\n",
+    "f[x_2] &= y_2 = e^{-x_2^2} = e^{-(1/2)^2} = e^{-1/4} \\\\\n",
+    "f[x_3] &= y_3 = e^{-x_3^2} = e^{-(1)^2} = e^{-1} \\\\\n",
+    "f[x_4] &= y_4 = e^{-x_4^2} = e^{-(3/2)^2} = e^{-9/4} \\\\\n",
+    "f[x_5] &= y_5 = e^{-x_5^2} = e^{-(2)^2} = e^{-4}\n",
+    "\\end{align*}\n",
+    "\n",
+    "To make it easier to hold controll on the points, we can format the coefficients into a table.\n",
+    "\n",
+    "\\begin{align*}\n",
+    "\\begin{matrix}\n",
+    "x_k & f[x_k] & f[x_k\\; x_{k+1}] & f[x_k\\; x_{k+1}\\; x_{k+2}] & f[x_k\\; x_{k+1}\\; x_{k+2}\\; x_{k+3}] & f[x_k\\; x_{k+1}\\; x_{k+2}\\; x_{k+3}\\; x_{k+4}] \\\\\n",
+    "\\_\\_\\_\\_&\\_\\_\\_\\_\\_\\_\\_&\\_\\_\\_\\_\\_\\_\\_\\_\\_\\_\\_\\_\\_\\_\\_\\_\\_\\_&\\_\\_\\_\\_\\_\\_\\_\\_\\_\\_\\_\\_\\_\\_\\_\\_\\_\\_\\_&\\_\\_\\_\\_\\_\\_\\_\\_\\_\\_\\_\\_\\_&\\_\\_\\_\\_\\_\\_\\_\\_\\_\\_\\_\\_\\_ \\\\\n",
+    "0 & 1 &        \\\\\n",
+    "  &   &   2e^{-1/4} - 2      \\\\\n",
+    "1/2 & e^{-1/4} &   &    \\frac{-4e + 2e^{1/4}}{e^{5/4}} + 2                      \\\\\n",
+    "    &   & 2e^{-1} - 2e^{-1/4}      &   & \\frac{2(6e^{3} + e - 2e^{13/4} - 5e^{9/4})}{3e^{13/4}}                                         \\\\\n",
+    "1   & e^{-1}   &    &    \\frac{e - 3e^{9/4} + 2e^{3}}{e^{13/4}}  & &  \\frac{-8e^{7} - 4e^{5} + 2e^{13/4} + 9e^{25/4} + 2e^{29/4}}{3e^{29/4}}               \\\\\n",
+    "    &          & e^{-9/4} - e^{-1} &   & \\frac{2(-2e^{7} - 3e^{5} + 2e^{13/4} + 4e^{25/4})}{3e^{29/4}}                                              \\\\\n",
+    "3/2 & e^{-9/4} &     &    \\frac{-2e^{5} + 2e^{13/4} + e^{25/4}}{e^{29/4}}               \\\\\n",
+    "    &          & 2e^{-4} - 2e^{-9/4}                                                     \\\\\n",
+    "2   & e^{-4}   &\n",
+    "\\end{matrix}\n",
+    "\\end{align*}\n",
+    "\n",
+    "Using this and the formula for Newton's divided difference, we can find a interpolating polynomial. And so\n",
+    "\n",
+    "\\begin{align*}\n",
+    "P_4 (x) = 1 + (2e^{-1/4} - 2)(x - 0) &+ \\left(\\frac{-4e + 2e^{1/4}}{e^{5/4}} + 2\\right)(x - 0)(x - 1/2) + \\left(\\frac{2(6e^{3} + e - 2e^{13/4} - 5e^{9/4})}{3e^{13/4}}\\right)(x - 0)(x - 1/2)(x - 1) \\\\\n",
+    "&+ \\left(\\frac{-8e^{7} - 4e^{5} + 2e^{13/4} + 9e^{25/4} + 2e^{29/4}}{3e^{29/4}}\\right)(x - 0)(x - 1/2)(x - 1)(x - 3/2)\n",
+    "\\end{align*}\n",
+    "By cleaning up and adding corresponding therms we get \n",
+    "\n",
+    "\\begin{align*}\n",
+    "P_4 (x) &= 1 - 0.44239 x - 0.37944 x^2 + 0.18995 x + 0.62587x^3 + 0.93881x^2 + 0.312935 x - 0.43481 x^3 + 1.30443 x^3 - 1.1957 x^2 + 0.32611 x \\\\\n",
+    "\n",
+    "P_4 (x) &= \\boxed{1.49549x^3 - 0.63633x^2 + 0.386605x + 1}\n",
+    "\\end{align*}\n",
+    "And so we have found a interpolating polynomial for the points given\n",
+    "\n",
+    "The anti-derivative of the polynomial $P_4 (x)$ is the integral with respect to $x$, so we can compute the indetermined integral\n",
+    "$$\n",
+    "\\int (1.49549x^3 - 0.63633x^2 + 0.386605x + 1)dx = \\boxed{0.3738725 x^4 - 0.212109 x^3 + 0.1933025 x^2 + x + C}\n",
+    "$$\n",
+    "where $C$ is the integration constant.\n",
+    "\n",
+    "We can now use this result to find the polynomial $P_5 (x)$ which is defined as\n",
+    "$$\n",
+    "P_5 (x) = \\int_0^x P_4(t) dt\n",
+    "$$\n",
+    "And so\n",
+    "\n",
+    "\\begin{align*}\n",
+    "P_5 (x) &= \\int_0^x P_4(t) dt \\\\\n",
+    "&= \\int_0^x (1.49549t^3 - 0.63633t^2 + 0.386605t + 1)dt \\\\\n",
+    "&= \\boxed{0.3738725 x^4 - 0.212109 x^3 + 0.1933025 x^2 + x} \n",
+    "\\end{align*}\n",
+    "\n",
+    "We know that the Gauss error function is defined as\n",
+    "$$\n",
+    "erf(x) = \\frac{2}{\\sqrt{\\pi}} \\int_0^x e^{-t^2}dt\n",
+    "$$\n",
+    "And we have that the interpolating polynomial is defined for the function $e^{-t^2}$, so for us to be able to compere $P_5 (x)$ with the error function then we need to multiply the polynomial with the factor $\\frac{2}{\\sqrt{\\pi}}$. And so\n",
+    "$$\n",
+    "\\frac{2}{\\sqrt{\\pi}}P_5 (x) = \\frac{2}{\\sqrt{\\pi}} (0.3738725 x^4 - 0.212109 x^3 + 0.1933025 x^2 + x)\n",
+    "$$\n",
+    "\n",
+    "We expect $P_5 (x)$ to be a reasonably good approximation, but since we have approximated the coefficients of the polynomial we will have a good amount of error in our computations. \n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### (c)\n",
+    "\n",
+    "We are here asked to consider the function \n",
+    "$$\n",
+    "f(x) = 1 - \\left(\\frac{c_1}{1 + 0.47047x} + \\frac{c_2}{(1 + 0.47047x)^2} + \\frac{c_3}{(1 + 0.47047x)^3}\\right)e^{-x^2}\n",
+    "$$\n",
+    "which depends on the $3$ parameters $c_1$, $c_2$ and $c_3$. And we let $x_1, ..., x_4$ be $4$ ordered and equally spaced points on the interval $[0,2]$, with $x_1 = 0$ and $x_4 = 2$ and we also let $y_i = erf(x_i)$ for $i=1,2,3,4$. We can use the given approximated values\n",
+    "$$\n",
+    "y_1 = 0.0,\\; \\; y_2 = 0.65422141,\\; \\; y_3 = 0.94065356,\\; \\; y_4 = 0.99532227.\n",
+    "$$\n",
+    "which are all found by nummerical integration. We are asked to explain that the conditions $y_1 = f(x_1), ..., y_4 = f(x_4)$ can be interpreted as a linear system of equations on the variables $c_1$, $c_2$ and $c_3$, and weather or not this system is consistent. That is, does it have a solution. We are further asked to find the least squares solution of the system and explain in which sense it determines the best approximation to $erf(x)$.  \n",
+    "We are then asked to choose the values for $c_1$, $c_2$ and $c_3$ found above and plot together with $P_5 (x)$ and $T_5 (x)$. \n",
+    "\n",
+    "We are asked to use four data points, that is $x_i$ for $i = 1,2,3,4$ which are eually spaced. We can use the linspace() function from numpy library to find all the $x$-values."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 148,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The x-values are given in the array [0.         0.66666667 1.33333333 2.        ]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(f\"The x-values are given in the array {np.linspace(0, 2, 4)}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "And so we have the $x$-values\n",
+    "\n",
+    "\\begin{align*}\n",
+    "x_1 &= 0 \\\\\n",
+    "x_2 &= 0.66\\bar{6} \\\\\n",
+    "x_3 &= 1.33\\bar{3} \\\\\n",
+    "x_4 &= 2\n",
+    "\\end{align*}\n",
+    "\n",
+    "We are given the conditions \n",
+    "\n",
+    "\\begin{align*}\n",
+    "y_1 &= f(x_1) \\\\\n",
+    "y_2 &= f(x_2) \\\\\n",
+    "y_3 &= f(x_3) \\\\\n",
+    "y_4 &= f(x_4)\n",
+    "\\end{align*}\n",
+    "\n",
+    "If we now use the expression for the function and the values for $x_i$ and $y_i$, we get the following set of equations\n",
+    "\n",
+    "\\begin{align*}\n",
+    "y_1 &= 1 - \\left(\\frac{c_1}{1 + 0.47047x_1} + \\frac{c_2}{(1 + 0.47047x_1)^2} + \\frac{c_3}{(1 + 0.47047x_1)^3}\\right)e^{-x_1^2} = 0.0 \\\\\n",
+    "y_2 &= 1 - \\left(\\frac{c_1}{1 + 0.47047x_2} + \\frac{c_2}{(1 + 0.47047x_2)^2} + \\frac{c_3}{(1 + 0.47047x_2)^3}\\right)e^{-x_2^2} = 0.65422141 \\\\\n",
+    "y_3 &= 1 - \\left(\\frac{c_1}{1 + 0.47047x_3} + \\frac{c_2}{(1 + 0.47047x_3)^2} + \\frac{c_3}{(1 + 0.47047x_3)^3}\\right)e^{-x_3^2} = 0.94065356 \\\\\n",
+    "y_4 &= 1 - \\left(\\frac{c_1}{1 + 0.47047x_4} + \\frac{c_2}{(1 + 0.47047x_4)^2} + \\frac{c_3}{(1 + 0.47047x_4)^3}\\right)e^{-x_4^2} = 0.99532227 \\\\\n",
+    "\\end{align*}\n",
+    "we can further input the value for $x_i$ and write the system with respect to $c_i$ for $i = 1,2,3$. And so\n",
+    "\n",
+    "\\begin{align*}\n",
+    "c_1 + c_2 + c_3 &= 1 \\\\\n",
+    "0.48809c_1 + 0.37155c_2 + 0.28284c_3 &= 0.34577859 \\\\\n",
+    "0.10386c_1 + 0.06382c_2 + 0.03922c_3 &= 0.05934644 \\\\\n",
+    "0.00943c_1 + 0.00486c_2 + 0.00250c_3 &= 0.00467773\n",
+    "\\end{align*}\n",
+    "\n",
+    "Which we can see is a linear system of equations on the variables $c_i$ for $i = 1,2,3$. We can also write the system i matrix from as\n",
+    "$$\n",
+    "\\begin{pmatrix} 1 & 1 & 1 \\\\ 0.48809 & 0.37155 & 0.28284 \\\\ 0.10386 & 0.06382 & 0.03922 \\\\ 0.00943 & 0.00486 & 0.00250 \\end{pmatrix}\n",
+    "\\begin{pmatrix} c_1 \\\\ c_2 \\\\ c_3 \\end{pmatrix}\n",
+    "= \n",
+    "\\begin{pmatrix} 1 \\\\ 0.34577859 \\\\ 0.05934644 \\\\ 0.00467773 \\end{pmatrix}\n",
+    "$$\n",
+    "or \n",
+    "$$\n",
+    "AC = b\n",
+    "$$\n",
+    "\n",
+    "For a linear system of equations where there are no solution, is what we call inconsistent. This is usually the case when there are $m$ equations with $n$ unknowns where $m > n$, and so using this fact we can notice that we have $3$ unkowns and $4$ equations. That is, our system is in fact **inconsistent** and by that has **no solution**.\n",
+    "\n",
+    "We can now use the least squares method to solve the system, and so we use the same method as used in problem 1b). And so, we can start by defining the matricies as arrays in python. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 152,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Defining the matricies\n",
+    "A2 = np.array([[1, 1, 1], [0.48809, 0.37155, 0.28284], [0.10386, 0.06382, 0.03922], [0.00943, 0.00486, 0.00250]])\n",
+    "b2 = np.array([[1], [0.34577859], [0.05934644], [0.00467773]])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Further we can solve for the matrix $C$ by considering the normal equation, which is defined as \n",
+    "$$\n",
+    "A^T A \\bar{C} = A^T b\n",
+    "$$\n",
+    "or \n",
+    "$$\n",
+    "\\bar{C} = (A^T A)^{-1} A^T b\n",
+    "$$\n",
+    "This is something we can solve using python, and so"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 155,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The solution for the normal equation is [[ 0.3460064  -0.09107299  0.74506658]]^T\n"
+     ]
+    }
+   ],
+   "source": [
+    "C2 = np.linalg.inv(A2.T@A2)@A2.T@b2\n",
+    "print(f\"The solution for the normal equation is {C2.T}^T\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "And so, we have that the least squares solution for our linear system of equations are given as\n",
+    "$$\n",
+    "\\begin{pmatrix} c_1 \\\\ c_2 \\\\ c_3 \\end{pmatrix}\n",
+    "= \\begin{pmatrix} 0.3460064 \\\\ -0.09107299 \\\\ 0.74506658 \\end{pmatrix}\n",
+    "$$\n",
+    "\n",
     "\n"
    ]
   }
