updated file; almost done 1c)

--- a/src/MA3.ipynb
+++ b/src/MA3.ipynb
@@ -1005,6 +1005,10 @@
     "= \\begin{pmatrix} 0.3460064 \\\\ -0.09107299 \\\\ 0.74506658 \\end{pmatrix}\n",
     "$$\n",
     "\n",
+    "And so, $f(x)$ takes the form \n",
+    "$$\n",
+    "f(x) = 1 - \\left(\\frac{0.3460064}{1 + 0.47047x} - \\frac{0.09107299}{(1 + 0.47047x)^2} + \\frac{0.74506658}{(1 + 0.47047x)^3}\\right)e^{-x^2}\n",
+    "$$\n",
     "\n"
    ]
   }
