updated file; done problem 1d)

--- a/src/MA3.ipynb
+++ b/src/MA3.ipynb
@@ -816,13 +816,15 @@
     "Using this and the formula for Newton's divided difference, we can find a interpolating polynomial. And so\n",
     "\n",
     "\\begin{align*}\n",
-    "P_4 (x) = 1 + (2e^{-1/4} - 2)(x - 0) &+ \\left(\\frac{-4e + 2e^{1/4}}{e^{5/4}} + 2\\right)(x - 0)(x - 1/2) + \\left(\\frac{2(6e^{3} + e - 2e^{13/4} - 5e^{9/4})}{3e^{13/4}}\\right)(x - 0)(x - 1/2)(x - 1) \\\\\n",
+    "P_4 (x) = 1 + (2e^{-1/4} - 2)(x - 0) &+ \\left(\\frac{-4e + 2e^{1/4}}{e^{5/4}} + 2\\right)(x - 0)(x - 1/2) \\\\\n",
+    "&+ \\left(\\frac{2(6e^{3} + e - 2e^{13/4} - 5e^{9/4})}{3e^{13/4}}\\right)(x - 0)(x - 1/2)(x - 1) \\\\\n",
     "&+ \\left(\\frac{-8e^{7} - 4e^{5} + 2e^{13/4} + 9e^{25/4} + 2e^{29/4}}{3e^{29/4}}\\right)(x - 0)(x - 1/2)(x - 1)(x - 3/2)\n",
     "\\end{align*}\n",
     "By cleaning up and adding corresponding therms we get \n",
     "\n",
     "\\begin{align*}\n",
-    "P_4 (x) &= 1 - 0.44239 x - 0.37944 x^2 + 0.18995 x + 0.62587x^3 + 0.93881x^2 + 0.312935 x - 0.43481 x^3 + 1.30443 x^3 - 1.1957 x^2 + 0.32611 x \\\\\n",
+    "P_4 (x) &= 1 - 0.44239 x - 0.37944 x^2 + 0.18995 x + 0.62587x^3 \\\\\n",
+    "&+ 0.93881x^2 + 0.312935 x - 0.43481 x^3 + 1.30443 x^3 - 1.1957 x^2 + 0.32611 x \\\\\n",
     "\n",
     "P_4 (x) &= \\boxed{1.49549x^3 - 0.63633x^2 + 0.386605x + 1}\n",
     "\\end{align*}\n",
@@ -1076,7 +1078,96 @@
     "\n",
     "We are here asked to split the interval $[0,2]$ up into $2000$ subintervals and we are further asked to find an approximation of $erf(2)$ by applying the **composite trapozezoid rule** for the corresponding grid points. We are not allowed to do this by hand, and so we will make use of a program to do the computations.\n",
     "\n",
-    "The composite trapozezoid rule is simply the sum of the trapozezoid rule applied to adjecent subintervals,\n"
+    "The composite trapozezoid rule is simply the sum of the trapozezoid rule applied to adjecent subintervals. And so, to approximate an integral of the form \n",
+    "$$\n",
+    "\\int_a^b f(x)dx\n",
+    "$$\n",
+    "We consider an evanly separated grid \n",
+    "$$\n",
+    "a = x_0 < x_1 < x_2 < \\cdots < x_{m-2} < x_{m-1} < x_{m} = b\n",
+    "$$\n",
+    "Then the **composite trapozezoid rule** is given by \n",
+    "$$\n",
+    "\\int_a^b f(x) dx = \\frac{h}{2} \\left(y_0 + y_m + 2\\sum_{i = 1}^{m - 1} y_i \\right)\n",
+    "$$\n",
+    "where \n",
+    "$$\n",
+    "h = \\frac{(b - a)}{m}\n",
+    "$$\n",
+    "In our case, we have that the composite trapozezoid rule is given by\n",
+    "$$\n",
+    "\\int_a^b e^{-x^2} dx = \\frac{h}{2} \\left(e^{-a^2} + e^{-b^2} + 2\\sum_{i = 1}^{m - 1} e^{-t_i^2} \\right)\n",
+    "$$\n",
+    "\n",
+    "And so, to compute the value we can implement a function in python."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def Comp_trapz(f, a:float, b:float, n:int):\n",
+    "    \"\"\"\n",
+    "    Function for computing the composite trapezoidal rule\n",
+    "\n",
+    "    Input:\n",
+    "        f: function to be integrated\n",
+    "        a: lower limit of integration\n",
+    "        b: upper limit of integration\n",
+    "        n: number of subintervals\n",
+    "    Output:\n",
+    "        The value of the integral\n",
+    "    \"\"\"\n",
+    "    h = (b - a) / n\n",
+    "    x = np.linspace(a, b, n + 1)\n",
+    "    y = f(x)\n",
+    "    return h * 0.5 * (y[0] + y[-1] + 2 * np.sum(y))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Now that we have made a function for approximating the integral \n",
+    "$$\n",
+    "\\int_0^2 e^{-t}dt\n",
+    "$$\n",
+    "We can use this to compute an approximation for $erf(2)$."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The value of erf(2) is 0.9964713042824083\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Defining the function to be integrated\n",
+    "f = lambda x: np.exp(-x**2)\n",
+    "erf_2 = (2 / np.sqrt(np.pi)) * Comp_trapz(f, 0, 2, 2000)\n",
+    "print(f\"The value of erf(2) is {erf_2}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We have found an approximation is given using the composite trapozezoid rule, as\n",
+    "$$\n",
+    "\\boxed{erf(2) \\approx 0.9964713042824083}\n",
+    "$$\n",
+    "\n",
+    "\n",
+    "\n"
    ]
   }
  ],
