update: final commit

--- a/src/MA3.ipynb
+++ b/src/MA3.ipynb
@@ -766,7 +766,7 @@
     "$$\n",
     "P_5 (x) = \\int_0^x P_4 (t) dt\n",
     "$$\n",
-    "We are also asked to elaborate on whether we expect $\\frac{2}{\\sqrt{\\pi}}P_5 (x)$ to be a good approximation to $erf(x)$.\n",
+    "We are also asked to elaborate on whether we expect $\\frac{2}{\\sqrt{\\pi}}P_5 (x)$ to be a good approximation to $erf(x)$ or not.\n",
     "\n",
     "We can either use the Lagrange interpolating polynomial or Newton's divided difference. We will here use Newton's divided difference as our method for finding the interpolating polynomial.\n",
     "\n",
