--- a/src/MA3.ipynb
+++ b/src/MA3.ipynb
@@ -1103,7 +1103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 88,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1112,12 +1112,12 @@
     "    Function for computing the composite trapezoidal rule\n",
     "\n",
     "    Input:\n",
-    "        f: function to be integrated\n",
-    "        a: lower limit of integration\n",
-    "        b: upper limit of integration\n",
-    "        n: number of subintervals\n",
+    "        f: function, function to be integrated\n",
+    "        a: float, lower limit of integration\n",
+    "        b: float, upper limit of integration\n",
+    "        n: int, number of subintervals\n",
     "    Output:\n",
-    "        The value of the integral\n",
+    "        float, the value of the integral\n",
     "    \"\"\"\n",
     "    h = (b - a) / n\n",
     "    x = np.linspace(a, b, n + 1)\n",
@@ -1138,7 +1138,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 89,
    "metadata": {},
    "outputs": [
     {
